Fix issue of li active background color

--- a/src/components/Navigation/Navigation.less
+++ b/src/components/Navigation/Navigation.less
@@ -7,7 +7,7 @@ li {
     margin-bottom: 0;
 }
 
-.list-group-item.active {
+:local(.navigation).list-group-item.active {
     background: #cb423c;
     border-color: rgba(0, 0, 0, 0.125);
 }
