--- a/src/App.less
+++ b/src/App.less
@@ -4,6 +4,14 @@ body {
   font-size: 1rem;
   font-weight: 400;
 }
+body {
+  overflow: hidden;
+  display: flex;
+}
+
+#root {
+  width: 100%;
+}
 
 #app {
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
@@ -48,6 +56,7 @@ footer {
 #main-content {
   flex-grow: 1;
   display:flex;
+  -webkit-box-flex: 1;
 }
 
 .main-background {
