--- a/src/Views/Home/Home.less
+++ b/src/Views/Home/Home.less
@@ -3,11 +3,15 @@
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+    overflow-y: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
 }
 
 #content {
     flex-grow: 1;
     overflow-y: scroll;
+    -webkit-box-flex: 1;
 }
 
 #list {
