--- a/src/components/Loader/Loader.less
+++ b/src/components/Loader/Loader.less
@@ -1,4 +1,4 @@
-.loader {
+:local(.loader) {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
     border-top: 16px solid blue;
@@ -9,7 +9,7 @@
     animation: spin 2s linear infinite;
   }
 
-  .loaderPanel {
+  :local(.loaderPanel) {
     position:fixed;
     padding:0;
     margin:0;
@@ -20,4 +20,14 @@
     z-index: 10000;
     background-color: lightgray;
     opacity: 0.5;
+  }
+  
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
